<resources>
    <string name="app_name">Componentes</string>
    <string name="toast_me">Toast me</string>
    <string name="minha_toast_customizada">Minha toast customizada</string>
    <string name="snack_me">Snack me</string>
    <string name="snack">Snack</string>
    <string name="desfazer">Desfazer</string>
    <string name="desfeito">Desfeito!</string>
    <string name="atribuir_spinner">Atribuir spinner</string>
    <string name="obter_spinner">Obter spinner</string>
    <string name="nada_selecionado">Nada selecionado</string>
    <string name="valor_seekbar">Valor seekbar</string>
    <string name="obter_seekbar">Obter seekbar</string>
    <string name="atribuir_seekbar">Atribuir seekbar</string>
    <string name="track_started">O usuário começou a arrastar</string>
    <string name="track_stoped">O usuário parou de arrastar</string>
    <string name="on_off">On / Off</string>
    <string name="radio_on">Radio on</string>
    <string name="radio_off">Radio off</string>
    <string name="datepicker">Datepicker</string>
    <string name="timepicker">Timepicker</string>

    <string-array name="spinner_values">
        <item>Gramas</item>
        <item>Kg</item>
        <item>Arroba</item>
        <item>Toneladas</item>
    </string-array>
</resources>