<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/linear_root"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_toast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/toast_me"/>

    <Button
        android:id="@+id/button_snack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/snack_me"/>

    <Spinner
        android:id="@+id/spinner_static"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:entries="@array/spinner_values"
        android:layout_height="wrap_content"/>

    <Spinner
        android:id="@+id/spinner_dynamic"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/linear_button_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_get_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/obter_spinner"/>
        <Button
            android:id="@+id/button_set_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/atribuir_spinner"/>

    </LinearLayout>

    <SeekBar
        android:id="@+id/seekbar"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:max="50"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_seekbar_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/valor_seekbar"/>

    <LinearLayout
        android:id="@+id/linear_button_seek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textSeekValue">

        <Button
            android:id="@+id/button_get_seekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/obter_seekbar"/>
        <Button
            android:id="@+id/button_set_seekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/atribuir_seekbar"/>

    </LinearLayout>

    <Switch
        android:id="@+id/switch_on_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>

    <CheckBox
        android:id="@+id/check_on_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/on_off"/>

</LinearLayout>